# python-project-83

./: .gitignore  Makefile  README.md  __init__.py  app.py  pyproject.toml  setup.cfg
.github/workflows/: CI.yml  main.yml  my_check.yml
page_analyzer/: __init__.py  app.py  logic_checks.py
page_analyzer/templates/: 404.html  base.html  index.html  page.html  url_id.html  urls.html
tests/: page_analyzer_test.py
