[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Makeev095 <makeev095095@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
bs4 = "^0.0.1"
postgres = "^4.0"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
